--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,29 @@ body {
   font-weight: 300;
 }
 
+.city__list {
+  width: 600px;
+  padding: 0 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 2rem;
+  margin: 2rem 0;
+  padding: 0;
+}
+
+.city__link {
+  color: black;
+  font-size: 1.75rem;
+  text-decoration: none;
+  font-weight: 200;
+  text-transform: uppercase;
+}
+
+.city__link:first-child {
+  color: #5fb0e8;
+  font-weight: 700;
+}
+
 .weather__container {
   background: white;
   padding: 4px;
@@ -23,6 +46,10 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+  }
+  .city__list {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
