--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,10 +19,11 @@ body {
 
 .city__link {
   color: black;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   text-decoration: none;
   font-weight: 200;
   text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .city__link--active {
@@ -39,6 +40,8 @@ body {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto auto;
   gap: 4px;
+  margin-bottom: 10rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -96,21 +99,32 @@ body {
   grid-column: 1 / 5;
   padding: 2.25rem 0;
   width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(3, auto);
   .weather__day {
     width: 100%;
     display: block;
     text-align: center;
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    grid-column: 1 / 3;
+    grid-row: 1;
+    margin-bottom: 2rem;
   }
   .weather__icon {
     font-size: 5.5rem;
+    grid-column: 1;
+    grid-row: 2 / 4;
+    margin-right: 1rem;
   }
   .weather__data {
-    font-size: 5rem;
+    font-size: 4rem;
+    line-height: 70%;
     font-family: 'Teko';
   }
   .weather__description {
+    font-size: 1.5rem;
   }
 }
 
