fix: mobile bottom margin

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -49,6 +49,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin-bottom: 2rem;
   }
   .city__list {
     flex-direction: column;
