refactor: add font-display to reduce CLS

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -134,6 +134,7 @@ body {
   src: url("./fonts/Teko-Light.ttf");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 /*# sourceMappingURL=app.css.map */
