--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -15,6 +15,7 @@ body {
   margin-bottom: 2rem;
   margin: 2rem 0;
   padding: 0;
+  list-style: none;
 }
 
 .city__link {
@@ -90,7 +91,7 @@ body {
 }
 .weather__card--regular .weather__data {
   font-size: 2rem;
-  font-family: "Teko";
+  font-family: 'Teko';
 }
 .weather__card--regular .weather__description {
   display: none;
@@ -123,15 +124,15 @@ body {
 .weather__card--large .weather__data {
   font-size: 4rem;
   line-height: 70%;
-  font-family: "Teko";
+  font-family: 'Teko';
 }
 .weather__card--large .weather__description {
   font-size: 1.5rem;
 }
 
 @font-face {
-  font-family: "Teko";
-  src: url("./fonts/Teko-Light.ttf");
+  font-family: 'Teko';
+  src: url('./fonts/Teko-Light.ttf');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
