--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -88,6 +88,7 @@ body {
   .weather__icon {
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
+    max-width: 30px;
   }
   .weather__data {
     font-size: 2rem;
@@ -119,6 +120,7 @@ body {
     grid-column: 1;
     grid-row: 2 / 4;
     margin-right: 1rem;
+    max-width: 88px;
   }
   .weather__data {
     font-size: 4rem;
